[package]
name = "board-game-utils"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bgu"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.5", features = ["derive"] }
ron = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
